--- a/sass/directory/pages/_acceuil.scss
+++ b/sass/directory/pages/_acceuil.scss
@@ -67,8 +67,8 @@
 .liste-restaurant {
   padding-bottom: 50px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   row-gap: 30px;
 }
 
@@ -101,7 +101,7 @@
       border-radius: 0 0 15px 15px;
       overflow-y: hidden;
       @extend .shadow;
-      .far {
+      .fa-heart {
         font-size: 1.5em;
         position: absolute;
         right: 15px;
@@ -115,49 +115,47 @@
   h2 {
     align-self: center;
   }
-  .liste-restaurant {
-    padding-bottom: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    row-gap: 30px;
-    column-gap: 65px;
-  }
 
-  .li-restaurant {
-    width: 33%;
-    margin-bottom: 50px;
+  .fonctionnement {
+    height: 200px;
+    h2 {
+      margin-bottom: 30px;
+    }
   }
-
   .liste-fonctionnement {
-    display: flex;
     margin-top: 10px;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    row-gap: 15px;
-    column-gap: 15px;
+    column-gap: 30px;
     li {
-      height: 115px;
+      height: 90px;
       width: 30%;
-      display: flex;
-      border-radius: 10px;
-      background-color: $light-grey;
       justify-content: center;
       align-items: center;
       @extend .shadow;
     }
   }
-  .card-restaurent {
-    .fas {
-    }
+
+  .fa-mobile-alt,
+  .fa-list-ul,
+  .fa-store {
+    font-size: 1.5em;
+  }
+
+  .liste-restaurant {
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 30px;
+  }
+
+  .li-restaurant {
+    width: 40%;
+    margin-bottom: 50px;
   }
 }
 
-/* @media screen and (min-width: 1025px) {
-  .card-restaurant {
-    img {
-      height: 96%;
-    }
+@media screen and (min-width: 1024px) {
+  .li-restaurant {
+    width: 22%;
   }
-} */
+}
