--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -1,432 +1,17 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 5 | @import "directory/component/_keyframe   .scss";
+ *   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ *   '
+ *   sass\main.scss 5:9  root stylesheet */
 
-body {
-  font-family: "Roboto", sans-serif;
-  font-size: 0.9em;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 5 \2502  @import \"directory/component/_keyframe   .scss\";\d\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   sass\\main.scss 5:9  root stylesheet";
 }
-
-ul {
-  list-style-type: none;
-}
-
-.main {
-  min-width: 320px;
-  padding: 0;
-}
-
-img {
-  object-fit: cover;
-}
-
-a,
-a:hover,
-a:visited,
-a:active {
-  color: #000;
-  text-decoration: none;
-}
-
-.btn {
-  padding: 15px 10px;
-  width: 185px;
-  border: none;
-  border-radius: 25px;
-  font-weight: bold;
-  text-align: center;
-  background: linear-gradient(170deg, #ff79da, 30%, #9356dc);
-  color: #fff !important;
-  align-self: center;
-}
-.btn--commander {
-  align-self: center;
-  margin: 35px 0;
-}
-.btn:hover {
-  background-color: 60%;
-}
-
-.btn-menu {
-  width: 55px;
-  background-color: #99e2d0;
-  color: #fff;
-  padding: 12px 16px;
-  font-size: 16px;
-  cursor: pointer;
-  border: none;
-  border-radius: 0 10px 10px 0;
-}
-
-.shadow, .li-restaurant .card-restaurant figcaption, .liste-fonctionnement li, .menu, .btn {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-}
-
-.fa-arrow-left {
-  font-size: 1.5em;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.image-menu {
-  height: 300px;
-}
-.image-menu img {
-  height: 100%;
-  width: 100%;
-}
-
-.menu-main {
-  display: flex;
-  flex-direction: column;
-  padding: 20px 10px 50px 10px;
-  background-color: #efefef;
-  border-radius: 25px 25px 0 0;
-}
-.menu-main h1 {
-  display: flex;
-}
-.menu-main h1 .fa-heart {
-  margin-left: auto;
-}
-
-.article-menu {
-  display: flex;
-  flex-direction: column;
-  margin-top: 30px;
-}
-.article-menu .menu-titre-carte {
-  margin-bottom: 20px;
-  animation: slideUp 1.5s ease-in-out forwards 0s;
-}
-
-.menu {
-  background-color: #fff;
-  margin-bottom: 17px;
-  border-radius: 15px;
-  display: flex;
-  overflow: hidden;
-  animation: menu-effet 1.5s ease-in-out forwards 0s;
-  /*  animation-name: menu-effet; */
-}
-.menu:active {
-  cursor: pointer;
-}
-.menu:active button {
-  margin-right: 0;
-}
-
-@keyframes menu-effet {
-  0% {
-    transform: translateY(50px);
-    opacity: 0;
-  }
-  20% {
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0px);
-    opacity: 1;
-  }
-}
-.article-menu ul li article {
-  display: flex;
-  flex-direction: column;
-  margin-right: auto;
-  width: 95%;
-  padding: 10px 0 10px 10px;
-}
-
-.article-menu ul li article .menu-content {
-  display: flex;
-  justify-content: space-between;
-}
-
-.menu-content p {
-  font-size: 13px;
-}
-
-.article-menu ul li article .menu-content span {
-  padding-right: 5px;
-}
-
-.article-menu ul li button {
-  margin-right: -55px;
-  transition: all 0.4s;
-}
-
-@media screen and (min-width: 768px) {
-  h1 {
-    margin-left: 46%;
-  }
-
-  .article-menu {
-    display: flex;
-    /* h3 {
-      align-self: center;
-    } */
-  }
-  .article-menu .menu-titre {
-    align-self: flex-start;
-  }
-
-  .liste-menu {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  .liste-menu .menu {
-    width: 44%;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .menu-contenu {
-    display: flex;
-    justify-content: space-around;
-  }
-  .menu-contenu li {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-
-  .liste-menu {
-    width: 100%;
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
-  .liste-menu .menu {
-    width: 100%;
-  }
-
-  .article-menu {
-    width: 90%;
-  }
-}
-.search-restaurant {
-  padding-bottom: 40px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-  justify-content: center;
-  background-color: #efefef;
-}
-.search-restaurant .localisation {
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: gainsboro;
-}
-.search-restaurant h2 {
-  width: 80%;
-  align-self: center;
-  text-align: center;
-}
-.search-restaurant p {
-  text-align: center;
-}
-
-.fonctionnement {
-  display: flex;
-  flex-direction: column;
-  padding: 30px 10px;
-}
-
-.liste-fonctionnement {
-  display: flex;
-  margin-top: 10px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  row-gap: 15px;
-}
-.liste-fonctionnement li {
-  height: 60px;
-  width: 90%;
-  display: flex;
-  border-radius: 10px;
-  background-color: #efefef;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-}
-
-.fa-mobile-alt,
-.fa-list-ul,
-.fa-store {
-  margin-right: 20px;
-  color: #9356dc;
-}
-
-.restaurant {
-  display: flex;
-  flex-direction: column;
-  background-color: #efefef;
-}
-.restaurant h2 {
-  padding: 40px 0 15px 18px;
-}
-
-.liste-restaurant {
-  padding-bottom: 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 30px;
-}
-
-.li-restaurant {
-  width: 90%;
-  margin-bottom: 50px;
-}
-.li-restaurant .card-restaurant {
-  height: 150px;
-  width: 100%;
-  position: relative;
-}
-.li-restaurant .card-restaurant .nouveau {
-  padding: 5px 8px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  border-radius: 3px;
-  font-weight: bold;
-  color: #278870;
-  background-color: #99e2d0;
-}
-.li-restaurant .card-restaurant img {
-  height: 80%;
-  width: 100%;
-  border-radius: 15px 15px 0 0;
-}
-.li-restaurant .card-restaurant figcaption {
-  position: relative;
-  padding: 10px 10px 10px 10px;
-  background-color: #fff;
-  border-radius: 0 0 15px 15px;
-  overflow-y: hidden;
-}
-.li-restaurant .card-restaurant figcaption .fa-heart {
-  font-size: 1.5em;
-  position: absolute;
-  right: 15px;
-  top: 35%;
-}
-.li-restaurant .card-restaurant figcaption .heart {
-  color: transparent;
-}
-.li-restaurant .card-restaurant figcaption .heart:hover {
-  animation: fullHeart 1s;
-  color: #9356dc;
-}
-
-@keyframes fullHeart {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@media screen and (min-width: 768px) {
-  h2 {
-    align-self: center;
-  }
-
-  .fonctionnement {
-    height: 200px;
-  }
-  .fonctionnement h2 {
-    margin-bottom: 30px;
-  }
-
-  .liste-fonctionnement {
-    margin-top: 10px;
-    flex-direction: row;
-    column-gap: 30px;
-  }
-  .liste-fonctionnement li {
-    height: 90px;
-    width: 30%;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .fa-mobile-alt,
-.fa-list-ul,
-.fa-store {
-    font-size: 1.5em;
-  }
-
-  .liste-restaurant {
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    column-gap: 30px;
-  }
-
-  .li-restaurant {
-    width: 40%;
-    margin-bottom: 50px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .li-restaurant {
-    width: 22%;
-  }
-}
-.header {
-  display: flex;
-}
-.header a {
-  margin: auto 20px;
-}
-.header .logo {
-  width: 10em;
-}
-.header .logo--acceuil {
-  margin: 20px auto;
-}
-.header .logo--restaurant {
-  margin: 20px 30px 20px 30px;
-}
-
-@media screen and (min-width: 768px) {
-  .logo--restaurant {
-    margin: 20px auto !important;
-  }
-}
-.footer {
-  padding: 20px;
-  background-color: grey;
-}
-.footer img {
-  width: 100px;
-  margin-bottom: 15px;
-}
-.footer .liste-footer {
-  display: flex;
-  flex-direction: column;
-  row-gap: 5px;
-  color: #fff;
-}
-
-@media screen and (min-width: 500px) {
-  .footer {
-    display: flex;
-    flex-direction: column;
-  }
-  .footer .liste-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    color: #fff;
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
