--- a/sass/directory/pages/_acceuil.scss
+++ b/sass/directory/pages/_acceuil.scss
@@ -1,3 +1,85 @@
+.load-page {
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  z-index: 10;
+  background-color: #fff;
+  position: absolute;
+  animation: load-page 2.5s 2s ease;
+}
+
+.loader {
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+  border: 4px solid $tertiary-color;
+  top: 45%;
+  animation: loader 1.5s ease-in-out;
+}
+
+.loader-inner {
+  padding-top: 45%;
+  vertical-align: top;
+  display: inline-block;
+  width: 100%;
+  /* background-color: $primary-color; */
+  animation: loader-inner 3s ease-in;
+}
+@keyframes load-page {
+  0% {
+    opacity: 100%;
+  }
+  50% {
+    opacity: 100%;
+  }
+  100% {
+    margin-left: -100%;
+    opacity: 0;
+  }
+}
+@keyframes loader {
+  0% {
+    rotate: (2turn);
+    height: 0;
+    left: 20%;
+  }
+
+  90% {
+    height: 200px;
+  }
+  50% {
+    scale: 1.8;
+  }
+  100% {
+    left: 0;
+    scale: 1;
+  }
+}
+
+@keyframes loader-inner {
+  0% {
+    height: 0%;
+  }
+
+  25% {
+    height: 0%;
+  }
+
+  50% {
+    height: 100%;
+  }
+
+  75% {
+    height: 100%;
+  }
+  /* 
+  100% {
+    height: 0%;
+  } */
+}
+
 .search-restaurant {
   padding-bottom: 40px;
   display: flex;
