--- a/sass/directory/base/_base.scss
+++ b/sass/directory/base/_base.scss
@@ -1,10 +1,11 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-* {
-  font-family: "Roboto", sans-serif;
+body {
+  overflow-x: hidden;
 }
 
 ul {
@@ -38,6 +39,7 @@ a:active {
 }
 
 .container {
+  min-height: 100%;
   max-width: 1920px;
   z-index: 1;
 }
