--- a/sass/directory/pages/_restaurant-page.scss
+++ b/sass/directory/pages/_restaurant-page.scss
@@ -22,9 +22,6 @@ form {
   border-radius: 30px 30px 0 0;
   h1 {
     display: flex;
-    /* .fa-heart {
-      margin-left: auto;
-    } */
     .fa-heart {
       font-size: 1em;
       position: absolute;
@@ -72,7 +69,11 @@ form {
   overflow: hidden;
   @extend .shadow;
   cursor: pointer;
-  animation: menu-effet 1.5s ease-in-out forwards 0s;
+  position: relative;
+  animation: menu-effet 1.5s ease-in-out forwards;
+  .--delay {
+    animation-delay: 1s;
+  }
   &:active {
     cursor: pointer;
     .fa-effet {
@@ -85,6 +86,14 @@ form {
 }
 
 @keyframes menu-effet {
+  from {
+    opacity: 0;
+    bottom: -50px;
+  }
+  to {
+    opacity: 1;
+    bottom: 0;
+  }
 }
 @keyframes fa-effet {
   0% {
