--- a/sass/directory/base/_base.scss
+++ b/sass/directory/base/_base.scss
@@ -39,7 +39,8 @@ a:active {
 }
 
 .container {
-  min-height: 100%;
+  margin: auto auto;
+  min-height: 100vh;
   max-width: 1920px;
   z-index: 1;
 }
